--- a/greenery/models/staging/postgres/_postgres__sources.yml
+++ b/greenery/models/staging/postgres/_postgres__sources.yml
@@ -2,6 +2,19 @@ version: 2
 
 sources:
 
-  - name: postgres
+  - name: src_postgres
     schema: public
     database: raw
+
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+
+    freshness:
+      warn_after: {count: 24, period: hour}
+      error_after: {count: 48, period: hour}    
+
+    tables:
+      - name: addresses      
+      - name: events
